0.1.5 (2010-03-23)
------------------

- Respect a ``wizard_serializer`` attribute of a schema to allow for munging
  of the validated data before it is pickled and after it is unpickled.

0.1.4 (2010-12-17)
------------------

- Make it possible for schemas to have a ``prev_ok`` and ``next_ok``
  attribute, which should be callables.  If either returns ``False``, the
  corresponding button on the form will be disabled (requires deform>=0.8.1).

0.1.3 (2010-12-02)
------------------

- Add classes and current step info to form wizard.

0.1.2 (2010-12-1)
------------------

- Another not-ready-for-primetime customer release: add ``get_summary()``
  method to form wizard.

0.1.1 (2010-11-30)
------------------

- Another not-ready-for-primetime customer release: refactor wizard state
  mutation and allow wizard states to be retrieved by name.
 
0.1 (2010-11-28)
----------------

- Not-ready-for-primetime release for customer (not uploaded to PyPI).

